# fachschaftsempfaenger

./: .gitattributes  .gitignore  .readthedocs.yml  CONTRIBUTING.rst  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  README.rst  docker-compose.yml  pyproject.toml  requirements.txt  script.sh  setup.py
.github/: dependabot.yml
.github/scripts/: deploy.sh
.github/workflows/: main.yml
assets/css/: style.css
doc/: Makefile
doc/source/: about.rst  conf.py  customize.rst  submodules.rst  usage.rst
docs/source/: about.rst  administration.rst  conf.py  development.rst  index.rst  installation.rst  submodules.rst  usage.rst
fachschaftsempfaenger/: __init__.py  admin.py  apps.py  bus.py  calendar.py  mastodon.py  mensa.py  models.py  urls.py  views.py  weather.py
fachschaftsempfaenger/static/css/: style.css
fachschaftsempfaenger/static/js/: clock.js
fachschaftsempfaenger/templates/: index.html
fachschaftsempfaenger/templates/tiles/: ad.html  advertisement.html  bus.html  calendar.html  fachschaft.html  foodtruck.html  forecast.html  mastodon.html  mensa.html  mensa_shedhalle.html  mensa_wilhelmstraße.html  sitzung.html  tile.html  weather.html
fachschaftsempfaenger/templatetags/: custom_tags.py
mysite/: middleware.py  settings.py  urls.py
